Rename the PluginsContribDir constant to PluginContribDir
fixes #8509

--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -21,7 +21,7 @@ object CheckCommand "ipmi-sensor" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	command = [ PluginsContribDir + "/check_ipmi_sensor" ]
+	command = [ PluginContribDir + "/check_ipmi_sensor" ]
 
 	arguments = {
 		"-H" = {
