--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -20,7 +20,7 @@
 object CheckCommand "interfacetable" {
 	import "plugin-check-command"
 
-	command = [ PluginsContribDir + "/check_interface_table_v3t" ]
+	command = [ PluginContribDir + "/check_interface_table_v3t" ]
 
 	arguments = {
 		"-H" = {
