--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -20,7 +20,7 @@
 object CheckCommand "mem" {
 	import "plugin-check-command"
 
-	command = [ PluginsContribDir + "/check_mem.pl" ]
+	command = [ PluginContribDir + "/check_mem.pl" ]
 
 	arguments = {
 		"-u" = {
