--- a/itl/plugins-contrib.d/virtualization.conf
+++ b/itl/plugins-contrib.d/virtualization.conf
@@ -20,7 +20,7 @@
 object CheckCommand "esxi_hardware" {
 	import "plugin-check-command"
 
-	command = [ PluginsContribDir + "/check_esxi_hardware.py" ]
+	command = [ PluginContribDir + "/check_esxi_hardware.py" ]
 
 	arguments = {
 		"-H" = {
