--- a/lib/cli/CMakeLists.txt
+++ b/lib/cli/CMakeLists.txt
@@ -27,7 +27,7 @@ set(cli_SOURCES
   pkiutility.cpp
   repositoryclearchangescommand.cpp repositorycommitcommand.cpp repositoryobjectcommand.cpp repositoryutility.cpp
   variablegetcommand.cpp variablelistcommand.cpp variableutility.cpp
-  troubleshootcollectcommand.cpp
+  troubleshootcommand.cpp
 )
 
 if(ICINGA2_UNITY_BUILD)
