Update PerfdataValue::Parse to ignore invalid warn, crit, min, and max values
... instead of generating exception so that metric values can
still be passed to the graphing backend.
Also update icinga-perfdata tests to reflect these changes.

refs #5043

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -103,6 +103,7 @@ add_boost_test(base
 	icinga_perfdata/multiple
 	icinga_perfdata/uom
 	icinga_perfdata/warncritminmax
+	icinga_perfdata/ignore_invalid_warn_crit_min_max
 	icinga_perfdata/invalid
 	icinga_perfdata/multi
 )
