Documentation: Refactor RemoteClient/Cluster/etc from community&training feedback
fixes #8318
fixes #8522
fixes #6858

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,16 +11,19 @@ pages:
 - [7-icinga-template-library.md, Icinga Template Library]
 - [8-cli-commands.md, CLI Commands]
 - [9-monitoring-remote-systems.md, Monitoring Remote Systems]
-- [10-addons-plugins.md, Addons and Plugins]
-- [11-alternative-frontends.md, Alternative Frontends]
-- [12-livestatus.md, Livestatus]
-- [13-troubleshooting.md, Troubleshooting]
-- [14-upgrading-icinga-2.md, Upgrading Icinga 2]
-- [15-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
-- [16-language-reference.md, Language Reference]
-- [17-library-reference.md, Library Reference]
-- [18-debug.md, Debug]
-- [19-appendix.md, Appendix]
+- [10-icinga2-client.md, Icinga 2 Client]
+- [11-agent-based-checks.md, Additional Agent-based Checks]
+- [12-distributed-monitoring-ha.md, Distributed Monitoring and High Availability]
+- [13-addons-plugins.md, Addons and Plugins]
+- [14-alternative-frontends.md, Alternative Frontends]
+- [15-livestatus.md, Livestatus]
+- [16-troubleshooting.md, Troubleshooting]
+- [17-upgrading-icinga-2.md, Upgrading Icinga 2]
+- [18-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
+- [19-language-reference.md, Language Reference]
+- [20-library-reference.md, Library Reference]
+- [21-debug.md, Debug]
+- [22-appendix.md, Appendix]
 theme: readthedocs
 markdown_extensions: [smarty]
 extra_javascript: [scroll.js]
