Add validator for time ranges in ScheduledDowntime objects
fixes #8600

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -246,6 +246,8 @@
 }
 
 %type ScheduledDowntime %inherits CustomVarObject {
+	%validator "ValidateScheduledDowntimeRanges",
+
 	%require "host_name",
 	%attribute %name(Host) "host_name",
 	%attribute %string "service_name",
