Fix check_disk thresholds: make sure partitions are the last arguments
fixes #8658

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -493,11 +493,13 @@ object CheckCommand "disk" {
 			value = "$disk_partitions$"
 			description = "Path or partition (may be repeated)"
 			repeat_key = true
+			order = 1
 		}
 
 		"-p_old" = {
 			key = "-p"
 			value = "$disk_partition$"
+			order = 1
 		}
 
 		"-x" = {
