Fix check_disk default thresholds and document the change of unit
fixes #8673

Signed-off-by: Michael Friedrich <michael.friedrich@gmail.com>

--- a/test/config/8063.conf
+++ b/test/config/8063.conf
@@ -4,16 +4,38 @@ object CheckCommand "8063-my-disk" {
   command = [ PluginDir + "/check_disk" ]
 
   arguments = {
-    "-w" = "$disk_wfree$%"
-    "-c" = "$disk_cfree$%"
-    "-W" = "$disk_inode_wfree$%"
-    "-K" = "$disk_inode_cfree$%"
-    "-p" = "$disk_partitions$"
-    "-x" = "$disk_partitions_excluded$"
+    "-w" = {
+      value = "$disk_wfree$"
+      description = "Exit with WARNING status if less than INTEGER units of disk are free or Exit with WARNING status if less than PERCENT of disk space is free"
+      required = true
+    }
+    "-c" = {
+      value = "$disk_cfree$"
+      description = "Exit with CRITICAL status if less than INTEGER units of disk are free or Exit with CRITCAL status if less than PERCENT of disk space is free"
+      required = true
+    }
+    "-W" = {
+      value = "$disk_inode_wfree$"
+      description = "Exit with WARNING status if less than PERCENT of inode space is free"
+    }
+    "-K" = {
+      value = "$disk_inode_cfree$"
+      description = "Exit with CRITICAL status if less than PERCENT of inode space is free"
+    }
+    "-p" = {
+      value = "$disk_partitions$"
+      description = "Path or partition (may be repeated)"
+      repeat_key = true
+      order = 1
+    }
+    "-x" = {
+      value = "$disk_partitions_excluded$"
+      description = "Ignore device (only works if -p unspecified)"
+    }
   }
 
-  vars.disk_wfree = 20
-  vars.disk_cfree = 10
+  vars.disk_wfree = "20%"
+  vars.disk_cfree = "10%"
 }
 
 object Host "8063-my-server" {
@@ -37,8 +59,8 @@ apply Service "8063-" for (disk => config in host.vars.local_disks) {
 
   vars += config
 
-  vars.disk_wfree = 10
-  vars.disk_cfree = 5
+  vars.disk_wfree = "10%"
+  vars.disk_cfree = "5%"
 
   assign where host.vars.local_disks
 }
