--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -603,8 +603,8 @@ object CheckCommand "disk" {
 		}
 	}
 
-	vars.disk_wfree = 20
-	vars.disk_cfree = 10
+	vars.disk_wfree = "20%"
+	vars.disk_cfree = "10%"
 	vars.disk_megabytes = true
 	vars.disk_exclude_type = ["none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs"]
 }
