--- a/lib/db_ido/db_ido-check.conf
+++ b/lib/db_ido/db_ido-check.conf
@@ -17,43 +17,10 @@
  * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.             *
  ******************************************************************************/
 
-#include "db_ido/dbquery.hpp"
-#include "base/dynamicobject.hpp"
+template CheckCommand "ido-check-command" {
+        execute = IdoCheck
+}
 
-namespace icinga
-{
-
-abstract class DbConnection : DynamicObject
-{
-	[config] String table_prefix {
-		default {{{ return "icinga_"; }}}
-	};
-
-	[config] Dictionary::Ptr cleanup {
-		default {{{ return new Dictionary(); }}}
-	};
-
-	[config] int categories {
-		default {{{
-			return DbCatConfig | DbCatState | DbCatAcknowledgement |
-			    DbCatComment | DbCatDowntime | DbCatEventHandler | DbCatExternalCommand | DbCatFlapping |
-			    DbCatLog | DbCatNotification | DbCatProgramStatus | DbCatRetention | DbCatStateHistory;
-		}}}
-	};
-
-	[config] bool enable_ha {
-		default {{{ return true; }}}
-	};
-
-	[config] double failover_timeout {
-		default {{{ return 60; }}}
-	};
-
-	String schema_version;
-	bool connected;
-	bool should_connect {
-		default {{{ return true; }}}
-	};
-};
-
+object CheckCommand "ido" {
+	import "ido-check-command"
 }
