--- a/lib/icinga/CMakeLists.txt
+++ b/lib/icinga/CMakeLists.txt
@@ -39,6 +39,7 @@ mkclass_target(usergroup.ti usergroup.thpp)
 mkclass_target(user.ti user.thpp)
 
 mkembedconfig_target(icinga-type.conf icinga-type.cpp)
+mkembedconfig_target(icinga-app.conf icinga-app.cpp)
 
 set(icinga_SOURCES
   api.cpp apievents.cpp checkable.cpp checkable.thpp checkable-dependency.cpp checkable-downtime.cpp checkable-event.cpp
@@ -51,7 +52,7 @@ set(icinga_SOURCES
   notification.thpp notification-apply.cpp objectutils.cpp perfdatavalue.cpp perfdatavalue.thpp pluginutility.cpp scheduleddowntime.cpp
   scheduleddowntime.thpp scheduleddowntime-apply.cpp service-apply.cpp checkable-check.cpp checkable-comment.cpp
   service.cpp service.thpp servicegroup.cpp servicegroup.thpp checkable-notification.cpp timeperiod.cpp timeperiod.thpp
-  user.cpp user.thpp usergroup.cpp usergroup.thpp icinga-type.cpp
+  user.cpp user.thpp usergroup.cpp usergroup.thpp icinga-type.cpp icinga-app.cpp
 )
 
 if(ICINGA2_UNITY_BUILD)
