Add "random" CheckCommand for test and demo purposes
fixes #8816

--- a/itl/command-icinga.conf
+++ b/itl/command-icinga.conf
@@ -31,3 +31,6 @@ object CheckCommand "cluster-zone" {
 	vars.cluster_zone = "$host.name$"
 }
 
+object CheckCommand "random" {
+	import "random-check-command"
+}
