--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -44,3 +44,7 @@ template NotificationCommand "plugin-notification-command" {
 template EventCommand "plugin-event-command" {
 	execute = PluginEvent
 }
+
+template CheckCommand "random-check-command" {
+	execute = RandomCheck
+}
