Add "random" CheckCommand for test and demo purposes
fixes #8816

--- a/itl/command.conf
+++ b/itl/command.conf
@@ -46,3 +46,7 @@ template NotificationCommand "plugin-notification-command" {
 template EventCommand "plugin-event-command" {
 	execute = PluginEvent
 }
+
+template CheckCommand "random-check-command" {
+	execute = RandomCheck
+}
