--- a/etc/icinga2/conf.d/notifications.conf
+++ b/etc/icinga2/conf.d/notifications.conf
@@ -12,6 +12,7 @@ apply Notification "mail-icingaadmin" to Host {
   import "mail-host-notification"
 
   user_groups = host.vars.notification.mail.groups
+  users = host.vars.notification.mail.users
 
   assign where host.vars.notification.mail
 }
@@ -20,6 +21,7 @@ apply Notification "mail-icingaadmin" to Service {
   import "mail-service-notification"
 
   user_groups = host.vars.notification.mail.groups
+  users = host.vars.notification.mail.users
 
   assign where host.vars.notification.mail
 }
