--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -27,13 +27,13 @@ if ( WIN32 )
   )
   
   list ( APPEND check_SOURCES 
-    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_ping.cpp
+    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_perfmon.cpp check_ping.cpp
     check_procs.cpp check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp check_users.cpp )
   
   foreach ( source ${check_SOURCES} ) 
     string ( REGEX REPLACE ".cpp\$" "" check_OUT "${source}" )
-		string ( REGEX REPLACE ".cpp\$" ".h" check_HEADER "${source}" )
-	
+    string ( REGEX REPLACE ".cpp\$" ".h" check_HEADER "${source}" )
+  
     add_executable ( ${check_OUT} ${source} ${check_HEADER} )
     target_link_libraries ( ${check_OUT} thresholds Shlwapi.lib ${Boost_PROGRAM_OPTIONS_LIBRARY} )
     
@@ -46,13 +46,14 @@ if ( WIN32 )
 
   target_link_libraries ( check_load Pdh.lib )
   target_link_libraries ( check_network Pdh.lib Iphlpapi.lib)
+  target_link_libraries ( check_perfmon Pdh.lib )
   target_link_libraries ( check_ping Ntdll.lib iphlpapi.lib Ws2_32.lib )
   target_link_libraries ( check_procs Pdh.lib )
   target_link_libraries ( check_uptime ${Boost_SYSTEM_LIBRARY} )
   target_link_libraries ( check_users wtsapi32.lib )
 
   install (
-    TARGETS check_disk check_load  check_memory check_network check_procs
+    TARGETS check_disk check_load  check_memory check_network check_perfmon check_procs
       check_ping check_service check_swap check_update check_uptime check_users
       RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
 
