--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -27,8 +27,8 @@ if ( WIN32 )
   )
   
   list( APPEND check_SOURCES 
-    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_ping.cpp check_procs.cpp
-    check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp check_users.cpp )
+    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_ping.cpp check_perfmon.cpp
+    check_procs.cpp check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp check_users.cpp )
   
   foreach ( source ${check_SOURCES} ) 
     string ( REGEX REPLACE ".cpp\$" "" check_OUT "${source}" )
@@ -45,14 +45,15 @@ if ( WIN32 )
 
   target_link_libraries( check_load Pdh.lib )
   target_link_libraries( check_network Pdh.lib )
+  target_link_libraries ( check_perfmon Pdh.lib )
   target_link_libraries( check_ping Ntdll.lib iphlpapi.lib Ws2_32.lib )
   target_link_libraries( check_procs Pdh.lib )
   target_link_libraries( check_uptime ${Boost_SYSTEM_LIBRARY} )
   target_link_libraries( check_users wtsapi32.lib )
 
   install (
-    TARGETS check_disk check_load  check_memory check_network check_procs check_ping
-      check_service check_swap check_update check_uptime check_users
+    TARGETS check_disk check_load check_memory check_network check_procs check_perfmon
+      check_ping check_service check_swap check_update check_uptime check_users
       RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
 
 endif()
