Fix wrong 'dns_lookup' custom attribute default
fixes #8862

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -856,7 +856,7 @@ object CheckCommand "dns" {
 		}
 	}
 
-	vars.dns_lookup = "$host_name$"
+	vars.dns_lookup = "$host.name$"
 	vars.dns_expected_answer = "$check_address$"
 }
 
