Add all missing UPS check parameters
fixes #8881

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -932,8 +932,40 @@ object CheckCommand "ups" {
 	command = [ PluginDir + "/check_ups" ]
 
 	arguments = {
-		"-H" = "$ups_address$"
-		"-u" = "$ups_name$"
+		"-H" = {
+			value = "$ups_address$"
+			description = "Address of the upsd server"
+			required = true
+		}
+		"-u" = {
+			value = "$ups_name$"
+			description = "Name of the UPS to monitor"
+			required = true
+		}
+		"-p" = {
+			value = "$ups_port"$
+			description = "Port number (default: 3493)"
+		}
+		"-v" = {
+			value = "$ups_variable$"
+			description = "Variable to monitor, valid strings are LINE, TEMP, BATTPCT or LOADPCT"
+		}
+		"-w" = {
+			value = "$ups_warning$"
+			description = "Warning threshold for the selected variable"
+		}
+		"-c" = {
+			value = "$ups_critical$"
+			description = "Critical threshold for the selected variable"
+		}
+		"-T" = {
+			set_if = "$ups_celsius$"
+			description = "Display temperature in degrees Celsius instead of Fahrenheit"
+		}
+		"-t" = {
+			value = "$ups_timeout$"
+			description = "Seconds before the connection times out (default: 10)"
+		}
 	}
 
 	vars.ups_address = "$check_address$"
