Fix incorrect macro string
refs #8881

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -943,7 +943,7 @@ object CheckCommand "ups" {
 			required = true
 		}
 		"-p" = {
-			value = "$ups_port"$
+			value = "$ups_port$"
 			description = "Port number (default: 3493)"
 		}
 		"-v" = {
