--- a/lib/icinga/CMakeLists.txt
+++ b/lib/icinga/CMakeLists.txt
@@ -15,28 +15,28 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-mkclass_target(checkable.ti checkable.thpp)
-mkclass_target(checkcommand.ti checkcommand.thpp)
-mkclass_target(checkresult.ti checkresult.thpp)
-mkclass_target(command.ti command.thpp)
-mkclass_target(comment.ti comment.thpp)
-mkclass_target(dependency.ti dependency.thpp)
-mkclass_target(downtime.ti downtime.thpp)
-mkclass_target(eventcommand.ti eventcommand.thpp)
-mkclass_target(hostgroup.ti hostgroup.thpp)
-mkclass_target(host.ti host.thpp)
-mkclass_target(icingaapplication.ti icingaapplication.thpp)
-mkclass_target(customvarobject.ti customvarobject.thpp)
-mkclass_target(icingastatuswriter.ti icingastatuswriter.thpp)
-mkclass_target(notificationcommand.ti notificationcommand.thpp)
-mkclass_target(notification.ti notification.thpp)
-mkclass_target(perfdatavalue.ti perfdatavalue.thpp)
-mkclass_target(scheduleddowntime.ti scheduleddowntime.thpp)
-mkclass_target(servicegroup.ti servicegroup.thpp)
-mkclass_target(service.ti service.thpp)
-mkclass_target(timeperiod.ti timeperiod.thpp)
-mkclass_target(usergroup.ti usergroup.thpp)
-mkclass_target(user.ti user.thpp)
+mkclass_target(checkable.ti checkable.tcpp checkable.thpp)
+mkclass_target(checkcommand.ti checkcommand.tcpp checkcommand.thpp)
+mkclass_target(checkresult.ti checkresult.tcpp checkresult.thpp)
+mkclass_target(command.ti command.tcpp command.thpp)
+mkclass_target(comment.ti comment.tcpp comment.thpp)
+mkclass_target(dependency.ti dependency.tcpp dependency.thpp)
+mkclass_target(downtime.ti downtime.tcpp downtime.thpp)
+mkclass_target(eventcommand.ti eventcommand.tcpp eventcommand.thpp)
+mkclass_target(hostgroup.ti hostgroup.tcpp hostgroup.thpp)
+mkclass_target(host.ti host.tcpp host.thpp)
+mkclass_target(icingaapplication.ti icingaapplication.tcpp icingaapplication.thpp)
+mkclass_target(customvarobject.ti customvarobject.tcpp customvarobject.thpp)
+mkclass_target(icingastatuswriter.ti icingastatuswriter.tcpp icingastatuswriter.thpp)
+mkclass_target(notificationcommand.ti notificationcommand.tcpp notificationcommand.thpp)
+mkclass_target(notification.ti notification.tcpp notification.thpp)
+mkclass_target(perfdatavalue.ti perfdatavalue.tcpp perfdatavalue.thpp)
+mkclass_target(scheduleddowntime.ti scheduleddowntime.tcpp scheduleddowntime.thpp)
+mkclass_target(servicegroup.ti servicegroup.tcpp servicegroup.thpp)
+mkclass_target(service.ti service.tcpp service.thpp)
+mkclass_target(timeperiod.ti timeperiod.tcpp timeperiod.thpp)
+mkclass_target(usergroup.ti usergroup.tcpp usergroup.thpp)
+mkclass_target(user.ti user.tcpp user.thpp)
 
 mkembedconfig_target(icinga-app.conf icinga-app.cpp)
 
@@ -45,11 +45,11 @@ set(icinga_SOURCES
   checkable-flapping.cpp checkcommand.cpp checkcommand.thpp checkresult.cpp checkresult.thpp
   cib.cpp command.cpp command.thpp comment.cpp comment.thpp compatutility.cpp dependency.cpp dependency.thpp
   dependency-apply.cpp downtime.cpp downtime.thpp eventcommand.cpp eventcommand.thpp
-  externalcommandprocessor.cpp host.cpp host.thpp hostgroup.cpp hostgroup.thpp icingaapplication.cpp
-  icingaapplication.thpp customvarobject.cpp customvarobject.thpp icingastatuswriter.cpp icingastatuswriter.thpp
-  legacytimeperiod.cpp macroprocessor.cpp notificationcommand.cpp notificationcommand.thpp notification.cpp
-  notification.thpp notification-apply.cpp objectutils.cpp perfdatavalue.cpp perfdatavalue.thpp pluginutility.cpp scheduleddowntime.cpp
-  scheduleddowntime.thpp scheduleddowntime-apply.cpp service-apply.cpp checkable-check.cpp checkable-comment.cpp
+  externalcommandprocessor.cpp host.cpp host.thpp hostgroup.cpp hostgroup.thpp icingaapplication.cpp icingaapplication.thpp
+  customvarobject.cpp customvarobject.thpp icingastatuswriter.cpp icingastatuswriter.thpp
+  legacytimeperiod.cpp macroprocessor.cpp notificationcommand.cpp notificationcommand.thpp notification.cpp notification.thpp
+  notification-apply.cpp objectutils.cpp perfdatavalue.cpp perfdatavalue.thpp pluginutility.cpp scheduleddowntime.cpp scheduleddowntime.thpp
+  scheduleddowntime-apply.cpp service-apply.cpp checkable-check.cpp checkable-comment.cpp
   service.cpp service.thpp servicegroup.cpp servicegroup.thpp checkable-notification.cpp timeperiod.cpp timeperiod.thpp
   user.cpp user.thpp usergroup.cpp usergroup.thpp icinga-app.cpp
 )
