--- a/lib/livestatus/CMakeLists.txt
+++ b/lib/livestatus/CMakeLists.txt
@@ -15,7 +15,7 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-mkclass_target(livestatuslistener.ti livestatuslistener.thpp)
+mkclass_target(livestatuslistener.ti livestatuslistener.tcpp livestatuslistener.thpp)
 
 set(livestatus_SOURCES
   aggregator.cpp andfilter.cpp attributefilter.cpp
