--- a/lib/notification/CMakeLists.txt
+++ b/lib/notification/CMakeLists.txt
@@ -15,7 +15,7 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-mkclass_target(notificationcomponent.ti notificationcomponent.thpp)
+mkclass_target(notificationcomponent.ti notificationcomponent.tcpp notificationcomponent.thpp)
 
 set(notification_SOURCES
   notificationcomponent.cpp notificationcomponent.thpp
