--- a/lib/demo/CMakeLists.txt
+++ b/lib/demo/CMakeLists.txt
@@ -15,7 +15,7 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-mkclass_target(demo.ti demo.thpp)
+mkclass_target(demo.ti demo.tcpp)
 
 set(demo_SOURCES
   demo.cpp demo.thpp
