--- a/lib/remote/CMakeLists.txt
+++ b/lib/remote/CMakeLists.txt
@@ -15,13 +15,13 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-mkclass_target(apilistener.ti apilistener.thpp)
-mkclass_target(endpoint.ti endpoint.thpp)
-mkclass_target(zone.ti zone.thpp)
+mkclass_target(apilistener.ti apilistener.tcpp apilistener.thpp)
+mkclass_target(endpoint.ti endpoint.tcpp endpoint.thpp)
+mkclass_target(zone.ti zone.tcpp zone.thpp)
 
 set(remote_SOURCES
-  apiclient.cpp apiclient-heartbeat.cpp apifunction.cpp apilistener.cpp apilistener-sync.cpp
-  apilistener.thpp authority.cpp endpoint.cpp endpoint.thpp jsonrpc.cpp
+  apiclient.cpp apiclient-heartbeat.cpp apifunction.cpp apilistener.cpp apilistener.thpp apilistener-sync.cpp
+  authority.cpp endpoint.cpp endpoint.thpp jsonrpc.cpp
   messageorigin.cpp zone.cpp zone.thpp
 )
 
