Added possibility to set securityLevel, e.g. if using snmpv3 without encryption. Defaults set to privAuth to stay compatible to older versions.

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -789,7 +789,7 @@ object CheckCommand "snmpv3" {
 	arguments = {
 		"-H" = "$snmpv3_address$"
 		"-P" = 3
-		"--seclevel" = "authPriv"
+		"--seclevel" = "$snmpv3_seclevel$"
 		"-U" = "$snmpv3_user$"
 		"-a" = "$snmpv3_auth_alg$"
 		"-A" = "$snmpv3_auth_key$"
@@ -804,6 +804,7 @@ object CheckCommand "snmpv3" {
 	vars.snmpv3_address = "$check_address$"
 	vars.snmpv3_auth_alg = "SHA"
 	vars.snmpv3_priv_alg = "AES"
+	vars.snmpv3_seclevel = "authPriv"
 }
 
 object CheckCommand "snmp-uptime" {
