Fix order of check_disk's ignored paths arguments
fixes #9049

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -578,12 +578,14 @@ object CheckCommand "disk" {
 			value = "$disk_ignore_eregi_path$"
 			description = "Regular expression to ignore selected path/partition (case insensitive) (may be repeated)"
 			repeat_key = true
+			order = 2
 		}
 
 		"-i" = {
 			value = "$disk_ignore_ereg_path$"
 			description = "Regular expression to ignore selected path or partition (may be repeated)"
 			repeat_key = true
+			order = 2
 		}
 
 		"-t" = {
