ITL: Add 'SHOWALL' command argument for 'nscp'
fixes #9115

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -897,10 +897,16 @@ object CheckCommand "nscp" {
 		"-w" = "$nscp_warn$"
 		"-c" = "$nscp_crit$"
 		"-t" = "$nscp_timeout$"
+		"-d" = {
+			value = "SHOWALL"
+			description = "Use with SERVICESTATE to see working services or PROCSTATE for running processes"
+			set_if = "$nscp_showall$"
+		}
 	}
 
 	vars.nscp_address = "$check_address$"
 	vars.nscp_port = 12489
+	vars.nscp_showall = false
 }
 
 object CheckCommand "by_ssh" {
